--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
+    "boxicons": "^2.1.2",
     "core-js": "^3.8.3",
+    "flowbite": "^1.4.1",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
@@ -22,10 +25,13 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-airbnb": "^6.0.0",
+    "autoprefixer": "^10.4.4",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-vue": "^8.0.3",
-    "eslint-plugin-vuejs-accessibility": "^1.1.0"
+    "eslint-plugin-vuejs-accessibility": "^1.1.0",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24"
   },
   "eslintConfig": {
     "root": true,
@@ -39,7 +45,11 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "max-len": "off",
+      "skipBlankLines": "off",
+      "no-param-reassign": 0
+    }
   },
   "browserslist": [
     "> 1%",
